--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
               alt="LinkedIn icon"
               class="icon contact-icon"
             />
-            <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+            <p><a href="https://www.linkedin.com/in/sushil-rana-2975961b2/">LinkedIn</a></p>
           </div>
         </div>
       </div>
